--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3001",
+    "start": "webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 9000",
     "build": "NODE_ENV=production webpack --progress --colors"
   },
   "license": "MIT",
@@ -49,6 +49,7 @@
     "autoresponsive-react": "^1.1.10",
     "history": "^3.0.0",
     "immutable": "^3.8.1",
+    "koa-webpack-dev-middleware": "^1.2.1",
     "rxjs": "^5.0.0-beta.10",
     "url-loader": "^0.5.7"
   }
