--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "immutable": "^3.8.1",
     "koa-webpack-dev-middleware": "^1.2.1",
     "rxjs": "^5.0.0-beta.10",
+    "simplify-js": "^1.2.1",
+    "superagent": "^2.1.0",
     "url-loader": "^0.5.7"
   }
 }
